<resources>
    <string name="app_name">Inventory</string>
    <string name="action_save">Save</string>
    <string name="supplier_name">Supplier</string>
    <string name="product_name">Product name</string>
    <string name="quantity">Quantity</string>
    <string name="item_price">Item Price</string>
    <string name="description">Description</string>
    <string name="contact">Contact no</string>
    <string name="editor_insert_product_successful">Product saved</string>
    <string name="btn_sale">Sale</string>
    <string name="btn_shipment">Shipment</string>
    <string name="editor_insert_product_failed">Error with saving product</string>
    <string name="action_delete">Delete</string>
    <string name="get_started">Get started by adding a product</string>
    <string name="delete_dialog_msg">Delete this pet?</string>
    <string name="list_item_price">Price</string>
    <string name="list_item_product">Product</string>
    <string name="cannot_query">Cannot query unknown URI </string>
    <string name="unknow_uri">Unknown URI </string>
    <string name="match"> with match </string>
    <string name="not_support">Insertion is not supported for </string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="lonely">"It is lonely hear</string>
    <string name="requir_supplier">Product requires a supplier</string>
    <string name="requir_name">Product requires a name</string>
    <string name="requir_qtty">Product requires valid quantity</string>
    <string name="requir_price">Product requires valid price</string>
    <string name="requir_contact">Product requires valid contact no</string>
    <string name="requir_image">Product requires image</string>
    <string name="fail_to_insert_row">Failed to insert row for</string>
    <string name="deletion_not_support">Deletion is not supported for</string>
    <string name="update_not_support">Update is not supported for</string>
    <string name="image_too_large">Image is too large</string>
    <string name="dont_miss">Don\'t miss anything</string>
    <string name="edit_product">Edit Product</string>
    <string name="update_fail">Update fail</string>
    <string name="updated">Product updated</string>
    <string name="delete_fail">Deletion error</string>
    <string name="deleted">Deleted</string>
    <string name="large_data">Loading fail due to large data</string>
    <string name="set_qtty">Set quantity</string>
    <string name="ok">OK</string>
    <string name="yes">yes</string>
    <string name="invalid_qtty">Invalid quantity</string>
    <string name="row_updated">Row updated</string>

</resources>
