<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.eilifint.ravimal.inventory.DetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/activity_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/image_detail_view"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/image_view_height"
                    android:scaleType="centerCrop" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:src="@android:drawable/ic_menu_call" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/zero"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:layout_weight="2"
                    android:gravity="center_vertical"
                    android:text="@string/supplier_name"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/supplier_detail_edit"
                    android:layout_width="@dimen/zero"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:layout_weight="3"
                    android:textAppearance="?android:textAppearanceMedium" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/zero"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:layout_weight="2"
                    android:text="@string/description"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/description_detail_edit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:layout_weight="3"
                    android:maxLines="3"
                    android:textAppearance="?android:textAppearanceMedium" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/zero"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:layout_weight="2"
                    android:text="@string/quantity"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/quantity_detail_edit"
                    android:layout_width="@dimen/zero"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:layout_weight="3"
                    android:inputType="number"
                    android:textAppearance="?android:textAppearanceMedium" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/zero"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:layout_weight="2"
                    android:text="@string/contact"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/contact_detail_edit"
                    android:layout_width="@dimen/zero"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:layout_weight="3"
                    android:inputType="phone"
                    android:maxLength="9"
                    android:maxLines="3"
                    android:textAppearance="?android:textAppearanceMedium" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/sale_btn"
                    android:layout_width="@dimen/zero"
                    android:layout_height="@dimen/btn_height"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:layout_weight="1"
                    android:text="@string/btn_sale"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/shipment_btn"
                    android:layout_width="@dimen/zero"
                    android:layout_height="@dimen/btn_height"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:layout_weight="1"
                    android:text="@string/btn_shipment"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />


            </LinearLayout>


        </LinearLayout>


    </RelativeLayout>
</ScrollView>