<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <Button
        android:id="@+id/sale_btn"
        android:layout_width="@dimen/zero"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:drawableLeft="@android:drawable/ic_menu_agenda"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:text="Sale"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="@dimen/zero"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/list_item_product"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#2B3D4D"
            android:textStyle="bold" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/quantity"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#2B3D4D"
            android:textStyle="bold" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/list_item_price"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#2B3D4D"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/zero"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:orientation="vertical">

        <TextView
            android:id="@+id/product_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_top_padding"
            android:layout_marginRight="@dimen/text_top_padding"
            android:layout_marginTop="@dimen/text_top_padding"
            android:fontFamily="sans-serif-medium"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_top_padding"
            android:layout_marginRight="@dimen/text_top_padding"
            android:layout_marginTop="@dimen/text_top_padding"
            android:fontFamily="sans-serif-medium"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:id="@+id/price_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_top_padding"
            android:layout_marginRight="@dimen/text_top_padding"
            android:layout_marginTop="@dimen/text_top_padding"
            android:fontFamily="sans-serif-medium"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:id="@+id/id_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_top_padding"
            android:layout_marginRight="@dimen/text_top_padding"
            android:layout_marginTop="@dimen/text_top_padding"
            android:fontFamily="sans-serif-medium"
            android:textAppearance="?android:textAppearanceSmall"
            android:textStyle="bold"
            android:visibility="invisible" />
    </LinearLayout>
</LinearLayout>